# bhasa-api-v2-cpp-client

./: .gitignore  AudioFile.h  CMakeLists.txt  Makefile  README.md  bs64.h  main.cpp  root_certificates.hpp  wav_loader.h
certify/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
certify/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  https_verification_fail  https_verification_success
